--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -11,11 +11,12 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_play"
-        app:tint="@color/black"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/trackProgress"
         app:layout_constraintEnd_toStartOf="@+id/btnNext"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/btnPrevious" />
+        app:layout_constraintStart_toEndOf="@+id/btnPrevious"
+        app:tint="@color/black" />
 
     <ImageView
         android:id="@+id/btnNext"
@@ -33,11 +34,11 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_previous"
-        app:tint="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/btnPlay"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnPlay" />
+        app:layout_constraintTop_toTopOf="@+id/btnNext"
+        app:tint="@color/black" />
 
     <ImageView
         android:id="@+id/btnStop"
@@ -45,10 +46,10 @@
         android:layout_height="60dp"
         android:src="@drawable/ic_stop"
         android:visibility="gone"
-        app:tint="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
-        app:layout_constraintEnd_toEndOf="@+id/btnPlay"
-        app:layout_constraintStart_toStartOf="@+id/btnPlay" />
+        app:layout_constraintBottom_toTopOf="@+id/trackProgress"
+        app:layout_constraintEnd_toStartOf="@+id/btnNext"
+        app:layout_constraintStart_toEndOf="@+id/btnPrevious"
+        app:tint="@color/black" />
 
     <TextView
         android:id="@+id/trackTitle"
@@ -100,7 +101,8 @@
         android:id="@+id/volumeProgress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnNext"
         app:layout_constraintEnd_toStartOf="@+id/volumeUp"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/volumeDown" />
