--- a/app/src/main/res/layout/layout_notification_collapsed.xml
+++ b/app/src/main/res/layout/layout_notification_collapsed.xml
@@ -31,7 +31,6 @@
         android:layout_marginEnd="48dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingStart="4dp"
         android:paddingTop="4dp"
         android:paddingEnd="8dp">
 
@@ -39,8 +38,7 @@
             android:id="@+id/smallIcon"
             android:layout_width="14dp"
             android:layout_height="14dp"
-            android:layout_marginStart="8dp"
-            tools:src="@drawable/ic_notification"
+            tools:src="@drawable/ic_app"
             tools:tint="@color/black" />
 
         <TextView
@@ -63,7 +61,6 @@
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@id/actions"
         android:orientation="vertical"
-        android:paddingStart="12dp"
         android:paddingEnd="12dp"
         android:paddingBottom="8dp">
 
@@ -75,6 +72,7 @@
             android:lines="1"
             android:singleLine="true"
             android:textStyle="bold"
+            android:textSize="16sp"
             tools:text="@tools:sample/lorem/random" />
 
         <TextView
@@ -84,6 +82,7 @@
             android:ellipsize="end"
             android:lines="1"
             android:singleLine="true"
+            android:visibility="gone"
             tools:text="@tools:sample/lorem/random" />
 
     </LinearLayout>
@@ -92,11 +91,13 @@
         android:id="@+id/actions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/content"
+        android:layout_alignTop="@id/image"
         android:layout_alignBottom="@id/content"
         android:layout_alignParentEnd="true"
-        android:layout_gravity="bottom"
-        android:layout_marginEnd="48dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:orientation="horizontal">
 
         <ImageButton
