--- a/app/src/main/res/layout/layout_notification_expanded.xml
+++ b/app/src/main/res/layout/layout_notification_expanded.xml
@@ -29,13 +29,12 @@
         android:layout_alignParentStart="true"
         android:orientation="vertical"
         android:paddingStart="0dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="144dp">
+        android:paddingTop="2dp">
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -43,7 +42,7 @@
                 android:id="@+id/smallIcon"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="2dp"
                 tools:src="@drawable/ic_notification"
                 tools:tint="@color/black" />
 
@@ -51,7 +50,6 @@
                 android:id="@+id/appName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
                 android:ellipsize="end"
                 android:lines="1"
                 android:singleLine="true"
@@ -66,10 +64,12 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
-            android:paddingStart="16dp"
+            android:paddingStart="2dp"
             android:paddingEnd="0dp"
             android:singleLine="true"
             android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="16sp"
             tools:text="@tools:sample/lorem/random" />
 
         <TextView
@@ -78,12 +78,13 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
-            android:paddingStart="16dp"
+            android:paddingStart="2dp"
             android:paddingEnd="0dp"
             android:singleLine="true"
             tools:text="@tools:sample/lorem/random" />
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal"
