--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -12,7 +12,8 @@
         android:layout_height="60dp"
         android:src="@drawable/ic_play"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/trackProgress"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnNext"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btnPrevious"
@@ -101,6 +102,7 @@
         android:id="@+id/volumeProgress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:max="15"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/btnNext"
         app:layout_constraintEnd_toStartOf="@+id/volumeUp"
@@ -124,7 +126,7 @@
         android:layout_marginBottom="8dp"
         android:text="00:00"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -135,7 +137,7 @@
         android:layout_marginBottom="8dp"
         android:text="34:45"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
